finished the DOM

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -7,6 +7,13 @@
 </head>
 <body style="color:#ffff; background-color:#212121 ">
     <h1>Helloo World......</h1>
+    <ul class="days">
+        <li class="Monday"> Monday</li>
+        <li class="Tuesday">Tuesday</li>
+        <li class="Wednesday">Wednesday</li>
+        <li class="Thursday">Thursday</li>
+    </ul>
 </body>
 <script src="manipulation.js"></script>
+<script src="editRemove.js"></script>
 </html>
